styled watchlist, administer queries, fixed some layout bugs that returned Refs #644
git-svn-id: file:///mnt/ramdisk/d4-svn/branches/features/redesign-3@2413 484df14f-75d2-4b3f-8ba0-490e05069a01

--- a/feedback/htdocs/feedback.css
+++ b/feedback/htdocs/feedback.css
@@ -3,12 +3,13 @@
   line-height: 30px;
   margin-right: 10px;
 }
-#feedback-trigger a {
-  color: #555;
-}
+
 #feedback-feedback {
   width: 389px;
 }
 #feedback-dialog {
   display: none;
 }
+
+#feedback-dialog h3 {font-size: 12px; font-weight: normal}
+#feedback-dialog input {float: right; margin-right: 43px;}
